🐛 FIX: ny version och massa justeringar

--- a/api/company/models/Company.settings.json
+++ b/api/company/models/Company.settings.json
@@ -68,6 +68,10 @@
     "mainimage": {
       "model": "image",
       "via": "companyimage"
+    },
+    "published": {
+      "required": true,
+      "type": "boolean"
     }
   }
 }
