--- a/api/article/models/Article.settings.json
+++ b/api/article/models/Article.settings.json
@@ -7,7 +7,10 @@
   },
   "options": {
     "increments": true,
-    "timestamps": true,
+    "timestamps": [
+      "created_at",
+      "updated_at"
+    ],
     "comment": ""
   },
   "attributes": {
@@ -33,6 +36,9 @@
     "coverimage": {
       "model": "image",
       "via": "articlecoverimage"
+    },
+    "published": {
+      "type": "boolean"
     }
   }
 }
