📦 NEW: börjat lägga till ordentliga vandra-funktionalitet

--- a/api/image/models/Image.settings.json
+++ b/api/image/models/Image.settings.json
@@ -35,6 +35,10 @@
     "articlecoverimage": {
       "model": "article",
       "via": "coverimage"
+    },
+    "streetimage": {
+      "model": "street",
+      "via": "imagecontent"
     }
   }
 }
