📦 NEW: massa nytt, helt gjort om upplägget baserat på att använda komponenter och dynamiska zoner

--- a/api/address/models/Address.settings.json
+++ b/api/address/models/Address.settings.json
@@ -29,15 +29,11 @@
       "type": "string"
     },
     "startdate": {
-      "type": "date",
+      "type": "datetime",
       "required": true
     },
     "enddate": {
-      "type": "date"
-    },
-    "company": {
-      "model": "company",
-      "via": "addresses"
+      "type": "datetime"
     }
   }
 }
