--- a/api/tag/models/Tag.settings.json
+++ b/api/tag/models/Tag.settings.json
@@ -14,6 +14,27 @@
     "name": {
       "required": true,
       "type": "string"
+    },
+    "modertagg": {
+      "collection": "tag",
+      "via": "dottertagg",
+      "dominant": true
+    },
+    "dottertagg": {
+      "collection": "tag",
+      "via": "modertagg"
+    },
+    "companies": {
+      "via": "tags",
+      "collection": "company"
+    },
+    "articles": {
+      "via": "tags",
+      "collection": "article"
+    },
+    "streets": {
+      "via": "tags",
+      "collection": "street"
     }
   }
 }
