📦 NEW: justerade static content något så footern fanns med. tog bort alla innehållstyperna som inte längre är aktuella.

--- a/api/static-content/models/static-content.settings.json
+++ b/api/static-content/models/static-content.settings.json
@@ -32,7 +32,10 @@
         "hultagård",
         "hylletofta",
 		"vandra",
-		"omoss"
+		"omoss",
+		"footer 1",
+		"footer 2",
+		"footer 3"
       ],
       "default": "sävsjö",
       "type": "enumeration"
