🐛 FIX: mer justeringar, främst att jag tog bort komponenterna för huvudbilderna och gjorde det till ett vanligt filfält

--- a/api/article/models/Article.settings.json
+++ b/api/article/models/Article.settings.json
@@ -23,14 +23,39 @@
       "required": true,
       "default": false
     },
-	"date": {
+    "date": {
       "type": "date"
     },
-    "huvudbild": {
-      "type": "component",
-      "repeatable": false,
-      "component": "content.huvudbild",
+    "mainimage": {
+      "model": "file",
+      "via": "related",
+      "plugin": "upload",
       "required": true
+    },
+    "layout": {
+      "type": "enumeration",
+      "enum": [
+        "huvudbild_fullbredd",
+        "huvudbild_vanster",
+        "huvudbild_hoger"
+      ],
+      "default": "huvudbild_fullbredd",
+      "required": true
+    },
+	"bildfokus": {
+      "type": "enumeration",
+      "enum": [
+        "topp",
+        "center",
+        "botten"
+      ],
+      "default": "center",
+      "required": true
+    },
+    "tags": {
+      "collection": "tag",
+      "via": "articles",
+      "dominant": true
     },
     "content": {
       "type": "dynamiczone",
@@ -43,11 +68,6 @@
         "content.2col-text-img"
       ],
       "required": true
-    },
-    "tags": {
-      "collection": "tag",
-      "via": "articles",
-      "dominant": true
     }
   }
 }
