--- a/api/street/models/Street.settings.json
+++ b/api/street/models/Street.settings.json
@@ -27,7 +27,7 @@
       "default": false,
       "required": true
     },
-    "mainimage": {
+    "streetimage": {
       "model": "file",
       "via": "related",
       "plugin": "upload",
@@ -43,7 +43,7 @@
       "default": "huvudbild_fullbredd",
       "required": true
     },
-	"bildfokus": {
+    "bildfokus": {
       "type": "enumeration",
       "enum": [
         "topp",
