--- a/api/article/models/Article.settings.json
+++ b/api/article/models/Article.settings.json
@@ -26,7 +26,7 @@
     "date": {
       "type": "date"
     },
-    "mainimage": {
+    "articleimage": {
       "model": "file",
       "via": "related",
       "plugin": "upload",
@@ -42,7 +42,7 @@
       "default": "huvudbild_fullbredd",
       "required": true
     },
-	"bildfokus": {
+    "bildfokus": {
       "type": "enumeration",
       "enum": [
         "topp",
